调整文章以符合markdown格式

--- a/_posts/2014-09-26-vlan.md
+++ b/_posts/2014-09-26-vlan.md
@@ -4,27 +4,28 @@ title: "openwrt vlan 配置"
 category: openwrt
 ---
 
-## 什么是vlan
+关于什么是vlan可以参考下面几篇文章:
 
-参考以下几篇文章:
 * [VLAN原理详解](http://blog.csdn.net/phunxm/article/details/9498829)  
 * [Virtual LANs (VLANs) and Logical VLAN Bridges](http://www.rocksclusters.org/roll-documentation/base/5.5/x1065.html)
 
-## /proc/net/dev
+## 网络接口
 
-	root@OpenWrt:/# cat /proc/net/dev
-	Inter-|   Receive                                                |  Transmit
-	 face |bytes    packets errs drop fifo frame compressed multicast|bytes    packets errs drop fifo colls carrier compressed
-	eth0.1:       0       0    0    0    0     0          0         0     3394      31    0    0    0     0       0          0
-	    lo:    5826      66    0    0    0     0          0         0     5826      66    0    0    0     0       0          0
-	 wlan0:   12167     129    0    0    0     0          0         0    13356     128    0    0    0     0       0          0
-	  eth0:       0       0    0    0    0     0          0         0    95939     309    0    0    0     0       0          0
-	br-lan:       0       0    0    0    0     0          0         0     6036      58    0    0    0     0       0          0
-	eth0.2:       0       0    0    0    0     0          0         0    90684     270    0    0    0     0       0          0
+```sh
+root@OpenWrt:/# cat /proc/net/dev
+Inter-|   Receive                                                |  Transmit
+ face |bytes    packets errs drop fifo frame compressed multicast|bytes    packets errs drop fifo colls carrier compressed
+eth0.1:       0       0    0    0    0     0          0         0     3394      31    0    0    0     0       0          0
+    lo:    5826      66    0    0    0     0          0         0     5826      66    0    0    0     0       0          0
+ wlan0:   12167     129    0    0    0     0          0         0    13356     128    0    0    0     0       0          0
+  eth0:       0       0    0    0    0     0          0         0    95939     309    0    0    0     0       0          0
+br-lan:       0       0    0    0    0     0          0         0     6036      58    0    0    0     0       0          0
+eth0.2:       0       0    0    0    0     0          0         0    90684     270    0    0    0     0       0          0
+```
 
 ### eth0, eth0.1, eth0.2
 
-路由器上只有一个网络接口eth0，eth0.1, eth0.2分别是...
+路由器上只有一个网络接口eth0，eth0.1, eth0.2分别是不同的vlan id。
 
 ### br-lan
 
@@ -36,10 +37,9 @@ wifi
 
 ### lo
 
-
 ## swconfig
 
-swconfig 是openwrt下的一个工具. 代码位于build_dir/target-mipsel_24kec+dsp_uClibc-0.9.33.2/swconfig。
+swconfig 是openwrt下的一个工具，代码位于 `build_dir/target-mipsel_24kec+dsp_uClibc-0.9.33.2/swconfig`。
 
 * swconfig使用libnl-tiny库来获取相关信息。
 * libnl-tiny是openwrt基于[libnl](http://www.infradead.org/~tgr/libnl/)库的某一个版本精简而来的，里面包仿如genl之类的基本功能。
@@ -48,124 +48,128 @@ swconfig 是openwrt下的一个工具. 代码位于build_dir/target-mipsel_24kec
 
 openwrt里有[一篇文章](http://wiki.openwrt.org/doc/techref/swconfig)介绍swconfig。
 
-以下是在一块mt7620n的板子上打印出来的信息。
+以下是使用 swconfig 命令在一块mt7620n的板子上打印出来的信息。
 
-### swconfig list
+**列出当前系统里的switch设备：**
 
-	# swconfig list
-	Found: switch0 - mt7530
+```sh
+# swconfig list
+Found: switch0 - mt7530
+```
 
-### swconfig dev switch0 show
+**显示当前配置：**
 
-### 显示当前配置
+```sh
+# swconfig dev mt7530 show (或: swconfig dev switch0 show)
+Global attributes:
+        enable_vlan: 1
+Port 0:
+        pvid: 2
+        link: port:0 link:down
+Port 1:
+        pvid: 1
+        link: port:1 link:down
+Port 2:
+        pvid: 1
+        link: port:2 link:down
+Port 3:
+        pvid: 1
+        link: port:3 link:down
+Port 4:
+        pvid: 1
+        link: port:4 link:down
+Port 5:
+        pvid: 0
+        link: port:5 link:down
+Port 6:
+        pvid: 0
+        link: port:6 link:up speed:1000baseT full-duplex 
+Port 7:
+        pvid: 0
+        link: port:7 link:down
+VLAN 1:
+        vid: 1
+        ports: 1 2 3 4 6t 
+VLAN 2:
+        vid: 2
+        ports: 0 6t 
+```
 
-	# swconfig dev mt7530 show
-	Global attributes:
-	        enable_vlan: 1
-	Port 0:
-	        pvid: 2
-	        link: port:0 link:down
-	Port 1:
-	        pvid: 1
-	        link: port:1 link:down
-	Port 2:
-	        pvid: 1
-	        link: port:2 link:down
-	Port 3:
-	        pvid: 1
-	        link: port:3 link:down
-	Port 4:
-	        pvid: 1
-	        link: port:4 link:down
-	Port 5:
-	        pvid: 0
-	        link: port:5 link:down
-	Port 6:
-	        pvid: 0
-	        link: port:6 link:up speed:1000baseT full-duplex 
-	Port 7:
-	        pvid: 0
-	        link: port:7 link:down
-	VLAN 1:
-	        vid: 1
-	        ports: 1 2 3 4 6t 
-	VLAN 2:
-	        vid: 2
-	        ports: 0 6t 
+**列出当前switch设备属性：**
 
-### 列出当前switch设备属性
+```sh
+# swconfig dev mt7530 help
+switch0: mt7530(mt7530), ports: 8 (cpu @ 6), vlans: 16
+     --switch
+        Attribute 1 (int): enable_vlan (VLAN mode (1:enabled))
+        Attribute 2 (none): apply (Activate changes in the hardware)
+        Attribute 3 (none): reset (Reset the switch)
+     --vlan
+        Attribute 1 (int): vid (VLAN ID (0-4094))
+        Attribute 2 (ports): ports (VLAN port mapping)
+     --port
+        Attribute 1 (int): pvid (Primary VLAN ID)
+        Attribute 2 (string): link (Get port link information)
+```
 
-	# swconfig dev mt7530 help
-	switch0: mt7530(mt7530), ports: 8 (cpu @ 6), vlans: 16
-	     --switch
-	        Attribute 1 (int): enable_vlan (VLAN mode (1:enabled))
-	        Attribute 2 (none): apply (Activate changes in the hardware)
-	        Attribute 3 (none): reset (Reset the switch)
-	     --vlan
-	        Attribute 1 (int): vid (VLAN ID (0-4094))
-	        Attribute 2 (ports): ports (VLAN port mapping)
-	     --port
-	        Attribute 1 (int): pvid (Primary VLAN ID)
-	        Attribute 2 (string): link (Get port link information)
+**禁用VLANS：**
 
-### 设置属性的值
-
-可设置属性在上面列出来了
-
-* Disable VLANS
+```
 	swconfig dev mt7530 set enable_vlan 0
 	swconfig dev mt7530 set apply
+```
 
-## /etc/config/network
+## 附 /etc/config/network 配置文件内容
 
-	root@OpenWrt:/# cat /etc/config/network 
-	
-	config interface 'loopback'
-	        option ifname 'lo'
-	        option proto 'static'
-	        option ipaddr '127.0.0.1'
-	        option netmask '255.0.0.0'
-	
-	config globals 'globals'
-	        option ula_prefix 'fd7e:6eb3:fe30::/48'
-	
-	config interface 'lan'
-	        option ifname 'eth0.1'
-	        option force_link '1'
-	        option macaddr '34:bd:f9:7b:fd:10'
-	        option type 'bridge'
-	        option proto 'static'
-	        option ipaddr '192.168.1.1'
-	        option netmask '255.255.255.0'
-	        option ip6assign '60'
-	
-	config interface 'wan'
-	        option ifname 'eth0.2'
-	        option force_link '1'
-	        option macaddr '34:bd:f9:7b:fd:11'
-	        option proto 'dhcp'
-	
-	config interface 'wan6'
-	        option ifname '@wan'
-	        option proto 'dhcpv6'
-	
-	config switch
-	        option name 'switch0'
-	        option reset '1'
-	        option enable_vlan '1'
-	
-	config switch_vlan
-	        option device 'switch0'
-	        option vlan '1'
-	        option ports '1 2 3 4 6t'
-	
-	config switch_vlan
-	        option device 'switch0'
-	        option vlan '2'
-	        option ports '0 6t'
-	
-	config interface 'wwan'
-	        option proto 'dhcp'
-	        option _orig_ifname 'radio0.network1'
-	        option _orig_bridge 'true'
+```sh
+root@OpenWrt:/# cat /etc/config/network 
 
+config interface 'loopback'
+        option ifname 'lo'
+        option proto 'static'
+        option ipaddr '127.0.0.1'
+        option netmask '255.0.0.0'
+
+config globals 'globals'
+        option ula_prefix 'fd7e:6eb3:fe30::/48'
+
+config interface 'lan'
+        option ifname 'eth0.1'
+        option force_link '1'
+        option macaddr '34:bd:f9:7b:fd:10'
+        option type 'bridge'
+        option proto 'static'
+        option ipaddr '192.168.1.1'
+        option netmask '255.255.255.0'
+        option ip6assign '60'
+
+config interface 'wan'
+        option ifname 'eth0.2'
+        option force_link '1'
+        option macaddr '34:bd:f9:7b:fd:11'
+        option proto 'dhcp'
+
+config interface 'wan6'
+        option ifname '@wan'
+        option proto 'dhcpv6'
+
+config switch
+        option name 'switch0'
+        option reset '1'
+        option enable_vlan '1'
+
+config switch_vlan
+        option device 'switch0'
+        option vlan '1'
+        option ports '1 2 3 4 6t'
+
+config switch_vlan
+        option device 'switch0'
+        option vlan '2'
+        option ports '0 6t'
+
+config interface 'wwan'
+        option proto 'dhcp'
+        option _orig_ifname 'radio0.network1'
+        option _orig_bridge 'true'
+```
